<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="contactoNuevo">Contacto Nuevo</string>
    <string name="title_activity_agregar_contactos">Agregar Contacto</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="sexo">Sexo</string>
    <string name="sexoHombre">Hombre</string>
    <string name="sexoMujer">Mujer</string>
    <string name="aficiones">Aficiones</string>
    <string name="aficionDeportes">Deportes</string>
    <string name="aficionCocina">Cocina</string>
    <string name="aficionInformatica">Informática</string>
    <string name="imagen">Imagen perfil</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="menuDetalles">Detalles</string>
    <string name="menuEditar">Editar</string>
    <string name="menuBorrar">Borrar</string>
    <string name="menuAutodestruccion">Autodestrucción</string>
    <string name="menuCreditos">Créditos</string>
    <string name="menuLlamar">Llamar</string>
    <string name="title_activity_detalles_contacto">Detalles Contacto</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_creditos">Creditos</string>

</resources>
