<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundclean"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AgregarContactos" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:background="@drawable/libroclean"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/imagen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/ivSexo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/sexo"
                        android:src="@drawable/ic_users" />

                    <TextView
                        android:id="@+id/txtNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtApellidos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:contentDescription="@string/email"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="2dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:contentDescription="@string/telefono"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/txtTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/aficiones"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/telefono"
                        android:src="@drawable/ic_phone" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/telefono"
                        android:src="@drawable/ic_phone" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:contentDescription="@string/telefono"
                        android:src="@drawable/ic_phone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtAficiones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/librosapilados" />
    </FrameLayout>
</LinearLayout>